@@ -1,3 +1,11 @@
+2008-04-10  Andy Wingo  <wingo@pobox.com>
+
+	* gnome/overrides/gtk.defs (popup):
+	* gnome/gw/gtk-support.h:
+	* gnome/gw/gtk-support.c (menu_position_fn)
+	(_wrap_gtk_menu_popup): Wrap gtk-menu-popup, with a scheme
+	positioning function and no user-data argument.
+
 2007-12-17  Jan Nieuwenhuizen  <janneke@gnu.org>
 
 	* gnome/gw/gtk-support.h: 
